iconspath=@top_srcdir@/icons

icon16dir=$(prefix)/share/icons/hicolor/16x16/apps
icon16_DATA=$(iconspath)/16x16/deadbeef.png

icon32dir=$(prefix)/share/icons/hicolor/32x32/apps
icon32_DATA=$(iconspath)/32x32/deadbeef.png

icon48dir=$(prefix)/share/icons/hicolor/48x48/apps
icon48_DATA=$(iconspath)/48x48/deadbeef.png

EXTRA_DIST = $(icon16_DATA) $(icon32_DATA) $(icon48_DATA)
