noinst_LIBRARIES = libmp4tagutil.a libtrkpropertiesutil.a libeqpreset.a libctmap.a libdeletefromdisk.a libtftintutil.a

libmp4tagutil_a_SOURCES = mp4tagutil.h mp4tagutil.c
libmp4tagutil_a_CFLAGS = -fPIC -std=c99 -I@top_srcdir@/external/mp4p/include

libtrkpropertiesutil_a_SOURCES = trkproperties_shared.h trkproperties_shared.c
libtrkpropertiesutil_a_CFLAGS = -fPIC -std=c99

libeqpreset_a_SOURCES = eqpreset.h eqpreset.c
libeqpreset_a_CFLAGS = -fPIC -std=c99

libctmap_a_SOURCES = ctmap.h ctmap.c
libctmap_a_CFLAGS = -fPIC -std=c99

libdeletefromdisk_a_SOURCES = deletefromdisk.h deletefromdisk.c
libdeletefromdisk_a_CFLAGS = -fPIC -std=c99

libtftintutil_a_SOURCES = tftintutil.h tftintutil.c
libtftintutil_a_CFLAGS = -fPIC -std=c99
