dnl Boilerplace code.

AC_INIT(include/dumb.h)
AC_CONFIG_AUX_DIR(config)

VERSION=0.9.2
PACKAGE="dumb"

AC_SUBST(VERSION)
AC_SUBST(PACKAGE)

AM_INIT_AUTOMAKE($PACKAGE, $VERSION)


dnl Checks for options.

AC_ARG_ENABLE(debug,
    AC_HELP_STRING(--enable-debug, build debug),
    CXXFLAGS="$CXXFLAGS -g"
    AC_DEFINE(DEBUG))

AC_ARG_ENABLE(deprec,
    AC_HELP_STRING(--enable-deprec, enable deprecated functions),
    AC_DEFINE(DUMB_DECLARE_DEPRECATED))


dnl Checks for programs.

AC_PROG_CC
AC_PROG_CPP
AM_PROG_LIBTOOL


dnl Checks for libraries.

dnl If building with gcc, use -Wall.
if test "x$GCC" = "xyes" ; then
   CFLAGS="$CFLAGS -Wall"
fi

dnl XXX check for allegro here


dnl Checks for header files.

AC_HEADER_STDC

dnl AC_C_BIGENDIAN  ??


dnl Output makefiles.

AC_OUTPUT(
        Makefile
        docs/Makefile
        include/Makefile
        include/internal/Makefile
        src/Makefile
        examples/Makefile
        make/Makefile)
