noinst_LIBRARIES = libsidplay2.a

AM_CPPFLAGS = $(CPPFLAGS) -DVERSION=\"2.1.0\" -DHAVE_STRNCASECMP -DHAVE_STRCASECMP -Ilibsidplay -Ilibsidplay/include -Ilibsidplay/include/sidplay -Ilibsidutils/include/sidplay/utils -Ibuilders/resid-builder/include/sidplay/builders -Ibuilders/resid-builder/include -I../include -I ../include

libsidplay2_a_SOURCES = libsidutils/src/SidDatabase.cpp\
libsidutils/src/SidFilter.cpp\
libsidutils/src/SidTuneMod.cpp\
libsidutils/src/MD5/MD5.cpp\
libsidutils/src/SidUsage.cpp\
libsidutils/src/ini/ini.cpp\
libsidplay/src/mixer.cpp\
libsidplay/src/player.cpp\
libsidplay/src/mos656x/mos656x.cpp\
libsidplay/src/mos6510/mos6510.cpp\
libsidplay/src/sid6526/sid6526.cpp\
libsidplay/src/sidtune/MUS.cpp\
libsidplay/src/sidtune/SidTuneTools.cpp\
libsidplay/src/sidtune/InfoFile.cpp\
libsidplay/src/sidtune/SidTune.cpp\
libsidplay/src/sidtune/PSID.cpp\
libsidplay/src/sidtune/PP20.cpp\
libsidplay/src/sidtune/IconInfo.cpp\
libsidplay/src/event.cpp\
libsidplay/src/psiddrv.cpp\
libsidplay/src/config.cpp\
libsidplay/src/sidplay2.cpp\
libsidplay/src/xsid/xsid.cpp\
libsidplay/src/mos6526/mos6526.cpp\
builders/resid-builder/src/resid.cpp\
builders/resid-builder/src/resid-builder.cpp\
resid/wave8580_PS_.cc\
resid/filter.cc\
resid/pot.cc\
resid/wave.cc\
resid/version.cc\
resid/wave6581__ST.cc\
resid/extfilt.cc\
resid/wave8580_PST.cc\
resid/wave6581_PST.cc\
resid/wave6581_P_T.cc\
resid/wave6581_PS_.cc\
resid/envelope.cc\
resid/voice.cc\
resid/sid.cc\
resid/wave8580__ST.cc\
resid/wave8580_P_T.cc\
libsidplay/src/reloc65.c
